bk_ida/gobmkida/g1/safety_to_string
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/safety_to_string/src/engine/printutils.c:818:26: error: use of undeclared identifier 'unk_48E3D1'
result = ( const char *)&unk_48E3D1; 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/safety_to_string/src/engine/printutils.c:824:26: error: use of undeclared identifier 'unk_48E3EF'
result = ( const char *)&unk_48E3EF; 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/safety_to_string/src/obj/1/printutils.o] Error 1
